tests/snapshot/error/source_locations/expression/template/to_string_single_expression.exp
TypeError: symbol cannot be converted to string
  ┌ source_locations/expression/template/to_string_single_expression.js:1:4
  |
1 | `${Symbol.iterator}`
  |    ^
Stack trace:
  at <global> (source_locations/expression/template/to_string_single_expression.js:1:4)